# hylarana

./: .gitignore  Cargo.toml  README.md  build.js  package.json
android/: .gitignore  build.gradle
android/src/main/rust/: Cargo.toml
android/src/main/rust/src/: discovery.rs  lib.rs  receiver.rs  sender.rs
app/: .gitignore  Cargo.toml  build.js  package.json  preload.js  tsconfig.json
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/example/hylarana/app/: Bridge.kt  DeviceManager.kt  Frontend.kt  HylaranaCoreService.kt  MainActivity.kt  Settings.kt
app/android/app/src/main/res/drawable/: power_off.xml
app/android/app/src/main/res/raw/: settings.json
app/android/gradle/: libs.versions.toml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/core/: Cargo.toml
app/core/src/: devices.rs  main.rs  manager.rs  message.rs
app/desktop/: Cargo.toml  Info.plist  build.js  build.rs  package.json
app/desktop/src/: config.rs  events.rs  main.rs
app/desktop/src/patch/: mac.m  mod.rs
app/desktop/src/windows/: mod.rs  remote.rs
app/desktop/src/windows/frontend/: discovery.rs  mod.rs  service.rs  settings.rs
app/frontend/: package.json  vite.config.ts
app/frontend/src/: app.tsx  bridge.ts  core.ts  state.ts
app/frontend/src/assets/locales/: chinase.json  english.json
app/frontend/src/components/: input.tsx
app/frontend/src/styles/: app.css  header.css  receiver.devices.css  sender.css  settings.css
app/frontend/src/widgets/: header.tsx  info.tsx  receiver.devices.tsx  sender.devices.tsx  sender.tsx  settings.audio.tsx  settings.codec.tsx  settings.network.tsx  settings.system.tsx  settings.tsx  settings.video.tsx
app/launcher/: .gitignore  common.ts  index.js  package.json  preload.js  tsconfig.json
app/launcher/src/: core.ts  main.ts  settings.ts  ui.ts
app/launcher/src/locales/: chinase.json  english.json
app/launcher/ui/: package.json
app/launcher/ui/src/: core.ts  hylarana.ts  locales.ts  message.ts  settings.ts  state.ts
app/launcher/ui/src/components/: main.header.tsx  main.info.tsx  main.receiver.devices.tsx  main.receiver.tsx  main.sender.devices.tsx  main.sender.tsx  main.settings.tsx  switch.tsx
app/launcher/ui/src/routes/: main.tsx
app/launcher/ui/src/styles/: index.css  main.header.css  main.receiver.css  main.receiver.devices.css  main.sender.css  main.sender.devices.css  main.settings.css
app/react/: package.json
app/react/src/: locales.ts  main.tsx  message.ts  settings.ts
app/react/src/components/: switch.tsx
app/react/src/routes/: main.receiver.devices.tsx
app/react/src/styles/: main.header.module.css  main.receiver.devices.module.css  main.receiver.module.css  main.sender.devices.module.css  main.sender.module.css  main.settings.module.css  switch.module.css
app/src/: devices.rs  discovery.rs  env.rs  events.rs  hylarana.ts  main.rs  main.ts  service.ts  settings.ts  tray.ts  window.ts
app/src/window/: main.rs  mod.rs  screen.rs
app/ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
app/ui/src/: App.vue  app.tsx  bridge.js  core.ts  devices.ts  events.ts  i18n.js  interfaces.ts  locales.ts  main.js  main.tsx  message.ts  router.js  router.ts  settings.js  settings.ts  state.ts  text.js  utils.ts
app/ui/src/assets/: main.css
app/ui/src/components/: Switch.vue  main.info.tsx  main.receiver.devices.tsx  main.receiver.tsx  main.sender.devices.tsx  main.sender.tsx  main.settings.tsx
app/ui/src/components/main/: Header.vue  Receiver.vue  Sender.vue  Settings.vue
app/ui/src/components/main/sender/: Devices.vue  Index.vue
app/ui/src/router/: index.js
app/ui/src/routes/: main.header.tsx  main.info.tsx  main.receiver.devices.tsx  main.receiver.tsx  main.sender.devices.tsx  main.sender.tsx  main.settings.tsx  main.tsx
app/ui/src/styles/: index.css  main.css  main.info.css  main.receiver.css  main.sender.css  main.sender.devices.css  main.settings.css  switch.css
app/ui/src/views/: Main.vue
app/ui/src/views/Main/: Receiver.vue  Sender.vue
app/ui/src/views/main/: header.vue  index.vue  info.vue  receiver.vue  settings.vue
app/ui/src/views/main/receiver/: devices.vue  index.vue
app/ui/src/views/main/sender/: devices.vue  index.vue  info.vue
applications/app/: Cargo.toml  build.js  helper.Info.plist  package.json
applications/app/src/: config.rs  helper.rs  main.rs
applications/app/src/windows/: mod.rs  remote.rs
applications/app/src/windows/frontend/: discovery.rs  mod.rs  service.rs  settings.rs
capture/: Cargo.toml
capture/linux-capture/: CMakeLists.txt  linux-capture.c  xcomposite-input.c  xcursor-xcb.c  xcursor-xcb.h  xhelpers.c  xhelpers.h  xshm-input.c
capture/src/: audio.rs  lib.rs
capture/src/linux/: audio.rs  camera.rs  screen.rs
capture/src/macos/: audio.rs  camera.rs  screen.rs
capture/src/win32/: audio.rs  camera.rs  screen.rs
codec/: Cargo.toml
codec/src/: audio.rs  codec.rs  lib.rs  video.rs
common/: Cargo.toml
common/src/: atomic.rs  codec.rs  frame.rs  lib.rs  logger.rs  macos.rs  runtime.rs  strings.rs  win32.rs
discovery/: Cargo.toml
discovery/examples/: receiver.rs  sender.rs
discovery/src/: lib.rs
examples/: Cargo.toml
ffi/: Cargo.toml
ffi/src/: lib.rs
hylarana/: Cargo.toml  README.md
hylarana/src/: lib.rs  player.rs  receiver.rs  sender.rs  util.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  vertex.rs
renderer/src/backbuffer/: mod.rs
renderer/src/generator/: mod.rs  texture.rs
renderer/src/transform/: direct3d.rs  metal.rs  mod.rs
resample/: Cargo.toml
resample/src/: lib.rs
sdk/android/hylarana/src/main/ffi/: Cargo.toml
sdk/android/hylarana/src/main/ffi/src/: discovery.rs  lib.rs  object.rs  receiver.rs  sender.rs
server/: Cargo.toml
server/src/: main.rs
transport/: Cargo.toml  build.rs
transport/src/: adapter.rs  filter.rs  lib.rs  protocol.rs  receiver.rs  sender.rs  service.rs
transport/src/multi/: mod.rs
transport/src/multicast/: mod.rs
transport/src/transmission/: mod.rs  options.rs  server.rs  socket.rs
(+83 files in other folders)
