[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "common",
    "codec",
    "resample",
    "capture",
    "renderer",
    "hylarana",
    "server",
    "transport",
    "examples/rust", 
    "discovery",
    "sdk/android/hylarana/src/main/ffi", 
    "app/core",
]

[workspace.dependencies]
anyhow = "1.0"
winit = "0.30"
log = "0.4"
libc = "0.2"
os_socketaddr = "0.2"
socket2 = "0.5"
which = "6.0"
jni = "0.21"
num_cpus = "1.16"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
smallvec = "1.13"
clap = { version = "4", features = ["derive"] }
tokio = "1"
thiserror = "2.0"
cpal = "0.15"
windows-capture = "1.4.0"
windows = "0.58"
screencapturekit = "0.3.2"
ffmpeg = { package = "ffmpeg-dev-sys", version = "0.1", default-features = false }
serde_repr = "0.1"
fern = "0.6"
chrono = "0.4"
core-video = { version = "0.3.0", package = "objc2-core-video" }
core-metal = { version = "0.3.0",  package = "objc2-metal" }
core-audo-types = { version = "0.3.0", package = "objc2-core-audio-types"}
objc2 = "0.6"
metal = "0.29"
mdns-sd = "0.13"
uuid = { version = "1.11", features = ["v4"] }
simple_logger = "5"
bytes = "1.5"
transport = { path = "transport", version = "0.3.0", package = "hylarana-transport" }
renderer = { path = "renderer", version = "0.3.0", package = "hylarana-renderer" }
discovery = { path = "discovery", version = "0.3.1", package = "hylarana-discovery" }
capture = { path = "capture", version = "0.3.0", package = "hylarana-capture" }
codec = { path = "codec", version = "0.3.0", package = "hylarana-codec" }
resample = { path = "resample", version = "0.3.0", package = "hylarana-resample" }
common = { path = "common", package = "hylarana-common" }
hylarana = { path = "hylarana", version = "0.4.0" }
rodio = { version = "0.19", default-features = false }
pollster = "0.3"
wgpu = "23"
bytemuck = { version = "1.17", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
