[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "common",
    "codec",
    "resample",
    "capture",
    "renderer",
    "hylarana",
    "server",
    "transport",
    "examples",
    "discovery",
    "android/src/main/rust",
    "app/desktop",
]

[workspace.dependencies]
transport = { path = "transport", version = "0.3.1", package = "hylarana-transport" }
renderer = { path = "renderer", version = "0.3.1", package = "hylarana-renderer" }
discovery = { path = "discovery", version = "0.3.1", package = "hylarana-discovery" }
capture = { path = "capture", version = "0.3.1", package = "hylarana-capture" }
codec = { path = "codec", version = "0.3.1", package = "hylarana-codec" }
resample = { path = "resample", version = "0.3.1", package = "hylarana-resample" }
common = { path = "common", version = "0.3.1", package = "hylarana-common" }
hylarana = { path = "hylarana", version = "0.4.0" }

[patch.crates-io]
core-media-rs = { git = "https://github.com/mycrl/core-frameworks", branch = "main" }
core-video-rs = { git = "https://github.com/mycrl/core-frameworks", branch = "main" }
