[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true

[workspace]
resolver = "2"
members = [
    "common",
    "codec",
    "resample",
    "capture",
    "renderer",
    "hylarana",
    "transport",
    "examples",
    "discovery",
    "android/src/main/rust",
    "applications/app",
]

[workspace.dependencies]
transport = { path = "transport", version = "0.5.0", package = "hylarana-transport" }
renderer = { path = "renderer", version = "0.5.0", package = "hylarana-renderer" }
discovery = { path = "discovery", version = "0.5.0", package = "hylarana-discovery" }
capture = { path = "capture", version = "0.5.0", package = "hylarana-capture" }
codec = { path = "codec", version = "0.5.0", package = "hylarana-codec" }
resample = { path = "resample", version = "0.5.0", package = "hylarana-resample" }
common = { path = "common", version = "0.5.0", package = "hylarana-common" }
hylarana = { path = "hylarana", version = "0.5.0" }

[patch.crates-io]
core-media-rs = { git = "https://github.com/doom-fish/core-frameworks", rev = "876d2d72f07ec796bf318021a034b5edb93a349f" }
core-video-rs = { git = "https://github.com/doom-fish/core-frameworks", rev = "876d2d72f07ec796bf318021a034b5edb93a349f" }
