[package]
name = "hylarana-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
hylarana = { path = "../hylarana" }
common = { path = "../common", package = "hylarana-common" }
winit = "0.30.5"
simple_logger = "5"
log = "0.4.25"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
webview = { git = "https://github.com/mycrl/webview-rs", branch = "0.3" }
tray-icon = "0.19.2"
image = "0.25.5"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [] }
