[package]
name = "hylarana-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hylarana = { path = "../hylarana" }
common = { path = "../common", package = "hylarana-common" }
winit = "0.30.5"
simple_logger = "5"
log = "0.4.25"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
webview = { path = "../../webview-rs/webview" }
tray-icon = "0.19.2"
image = { version = "0.25.5", default-features = false, features = ["ico"]}
raw-window-handle = "0.6.2"
serde = "1.0.217"
serde_json = "1.0.138"
tokio-tungstenite = "0.26"
futures-util = "0.3.31"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [] }
