[package]
name = "hylarana-capture"
version = "0.3.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
common = { path = "../common", version = "0.3.0", package = "hylarana-common" }
resample = { path = "../resample", version = "0.3.0", package = "hylarana-resample" }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
once_cell = "1.19"
windows-capture = { version = "1.4.0" }
windows = { version = "0.58", features = ["Win32_Media", "Win32_Media_MediaFoundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3.2"
core-foundation = "0.10"
core-media = { version = "0.3", package = "core-media-rs" }
