[package]
name = "hylarana-capture"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
common.workspace = true
resample.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
cpal.workspace = true
windows-capture.workspace = true
windows = { workspace = true, features = ["Win32_Media", "Win32_Media_MediaFoundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit.workspace = true
core-foundation = "0.10"
core-media = { version = "0.3", package = "core-media-rs" }

[features]
serde = []
