[package]
name = "hylarana-capture"
version = "0.3.1"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
common.workspace = true
resample.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
windows-capture = "=1.4.0"
windows = { version = "0.58", features = [
    "Win32_Media",
    "Win32_Media_MediaFoundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-media = { version = "0.3", package = "core-media-rs" }
screencapturekit = "0.3"
core-foundation = "0.10"

[features]
serde = []
