[package]
name = "hylarana-codec"
version = "0.5.0"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
log = "0.4"
thiserror = "2.0"
common.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg = { package = "ffmpeg-dev-sys", version = "0.1", default-features = false, features = [
    "avcodec",
    "avdevice",
    "avutil",
    "qsv",
] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
ffmpeg = { package = "ffmpeg-dev-sys", version = "0.1", default-features = false, features = [
    "avcodec",
    "avdevice",
    "avutil",
] }
