[package]
name = "hylarana-common"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror.workspace = true
log.workspace = true
serde_repr.workspace = true
serde.workspace = true
parking_lot.workspace = true
fern = { workspace = true, features = ["date-based", "colored", "syslog-6"] }
chrono = { workspace = true, features = ["clock", "alloc"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-media = { version = "0.3.0", package = "objc2-core-media" }
core-foundation = { version = "0.3.0", package = "objc2-core-foundation" }
core-audo-types.workspace = true
core-video.workspace = true
core-metal.workspace = true
objc2.workspace = true
metal.workspace = true

[features]
serde = []
