[package]
name = "hylarana-common"
version = "0.5.0"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0"
log = "0.4"
serde_repr = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
fern = { version = "0.6", features = ["date-based", "syslog-6"] }
chrono = { version = "0.4", features = ["clock", "alloc"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-media = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-core-audio-types = "0.3.0"
objc2-core-video = "0.3.0"
objc2-metal = "0.3.0"
objc2 = "0.6"
metal = "0.29"
block2 = "0.6"
objc2-av-foundation = { version = "0.3.0", features = [
    "AVMediaFormat",
    "block2",
] }

[features]
serde = []
