[package]
name = "hylarana-discovery"
version = "0.3.1"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0"
log = "0.4"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["sync", "macros"] }
libp2p = { version = "0.55.0", default-features = false, features = ["mdns", "gossipsub", "noise", "tcp", "yamux", "tokio", "macros"]}
