[package]
name = "hylarana"
version = "0.4.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "./README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror.workspace = true
bytes.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
common.workspace = true
transport.workspace = true
renderer.workspace = true
discovery.workspace = true
capture.workspace = true
codec.workspace = true
rodio.workspace = true

[features]
serde = ["common/serde", "capture/serde"]
