[package]
name = "hylarana-renderer"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
pollster = "0.3"
thiserror = "2.0"
smallvec = "1.13"
wgpu = "23"
bytemuck = { version = "1.17", features = ["derive"] }
common = { path = "../common", version = "0.3.1", package = "hylarana-common" }
resample = { path = "../resample", version = "0.3.1", package = "hylarana-resample" }
