[package]
name = "hylarana-renderer"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
pollster.workspace = true
thiserror.workspace = true
smallvec.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
common.workspace = true
resample.workspace = true
