[package]
name = "hylarana-renderer"
version = "0.5.0"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
log = "0.4"
thiserror = "2.0"
smallvec = "1.13"
wgpu = "23"
bytemuck = { version = "1.17", features = ["derive"] }
common.workspace = true
resample.workspace = true
