[package]
name = "hylarana-resample"
version = "0.3.1"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
common.workspace = true
thiserror.workspace = true

[dependencies.ffmpeg]
workspace = true
features = ["swresample"]
