[package]
name = "hylarana-resample"
version = "0.5.0"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
thiserror = "2.0"
common.workspace = true
ffmpeg = { package = "ffmpeg-dev-sys", version = "0.1", default-features = false, features = [
    "swresample",
] }
