[package]
name = "hylarana-server"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
common.workspace = true
transport.workspace = true
clap.workspace = true
mimalloc.workspace = true
parking_lot.workspace = true
