[package]
name = "hylarana-server"
version = "0.3.1"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
anyhow = "1.0"
log = "0.4"
simple_logger = "5"
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1"
parking_lot = "0.12"
common.workspace = true
transport.workspace = true
