[package]
name = "hylarana-transport"
version = "0.3.0"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
bytes = "1.5"
log = "0.4"
crossbeam = "0.8"
common = { path = "../common", version = "0.3.0", package = "hylarana-common" }
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
parking_lot = "0.12"
libc = "0.2"
uuid = { version = "1.11", features = ["v4"] }
os_socketaddr = "0.2"
socket2 = "0.5"
once_cell = "1.19"
tokio = { version = "1", features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
] }

[build-dependencies]
anyhow = "1.0"
which = "6.0"
