[package]
name = "hylarana-transport"
version = "0.3.1"
edition = "2021"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
bytes.workspace = true
log.workspace = true
crossbeam.workspace = true
common.workspace = true
xxhash-rust.workspace = true
parking_lot.workspace = true
libc.workspace = true
uuid.workspace = true
os_socketaddr.workspace = true
socket2.workspace = true
tokio = { workspace = true, features = [ "net", "sync", "macros"] }

[build-dependencies]
anyhow.workspace = true
which.workspace = true
