[package]
name = "hylarana-transport"
version = "0.5.0"
edition = "2024"
description = "A cross-platform screen casting library implemented by Rust."
license = "LGPL-2.1-only"
readme = "../README.md"
repository = "https://github.com/mycrl/hylarana"

[dependencies]
arc-swap = "1.7.1"
bytes = "1.5"
log = "0.4"
common.workspace = true
parking_lot = "0.12"
libc = "0.2"
os_socketaddr = "0.2"
socket2 = "0.5"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0"
which = "6.0"
bindgen = "0.71.1"

[features]
serde = []
