[package]
name = "hylarana-app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc.workspace = true
anyhow.workspace = true
winit.workspace = true
log.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
uuid.workspace = true
bytes.workspace = true
common = { workspace = true, features = ["serde"] }
hylarana = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["net", "sync", "io-util", "time"] }
