[package]
name = "android-native"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "hylarana"
doc = false

[dependencies]
anyhow = "1.0"
log = "0.4"
bytes = "1.5"
jni = "0.21"
num_cpus = "1.16"
serde_json = "1.0"
parking_lot = "0.12"
transport.workspace = true
discovery.workspace = true
common = { workspace = true, features = ["serde"] }
