[package]
name = "hylarana-shared"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "hylarana"
doc = false

[dependencies]
anyhow = "1.0"
log = "0.4"
bytes = "1.5"
jni = "0.21"
num_cpus = "1.16"
serde_json = "1.0"
common = { path = "../../../../../../common", package = "hylarana-common", features = ["serde-short"]}
transport = { path = "../../../../../../transport", package = "hylarana-transport" }
discovery = { path = "../../../../../../discovery", package = "hylarana-discovery" }
