[package]
name = "hylarana-shared"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "hylarana"
doc = false

[dependencies]
anyhow.workspace = true
log.workspace = true
bytes.workspace = true
jni.workspace = true
num_cpus.workspace = true
serde_json.workspace = true
common = { workspace = true, features = ["serde"]}
transport.workspace = true
discovery.workspace = true
parking_lot.workspace = true
